# sc2-ml

./: .claudeignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LATER.md  NIGHT_SUMMARY_2026-04-17.md  README.md  _current_plan.md  architecture_audit.md  config.py  coverage.txt  data_ingestion.py  data_processing.py  follow_up_plan.md  gnn_model.py  gnn_pipeline.py  gnn_trainer.py  gnn_visualizer.py  in_game_processing_manifest.json  jupytext.toml  main.py  ml_pipeline.py  model_training.py  node2vec_embedder.py  processing_manifest.json  pyproject.toml  session_audit.md  session_audit_plan.md  source_audit.md  stress_test.md  test_plan.md  web_enable_plan.md  what_can_be_pre_commit_hooks.md
.claude/: README.md  aoe2-plan.md  author-style-brief-pl.md  chat-handoff.md  coding-standards.md  dev-constraints.md  git-workflow.md  ml-protocol.md  project-architecture.md  python-workflow.md  scientific-invariants.md  settings.json  testing-standards.md  thesis-formatting-rules.yaml  thesis-writing.md
.claude/agents/: executor.md  planner-science.md  planner.md  reviewer-adversarial.md  reviewer-deep.md  reviewer.md  reviewier-deep.md  writer-thesis.md
.claude/commands/: dag.md  materialize_plan.md  pr.md
.claude/rules/: data-analysis-lineage.md  git-workflow.md  python-code.md  sql-data.md  thesis-writing.md
.github/: pull_request_template.md
canary/: alpha.txt  beta.txt
docs/: DATA_EXPLORATION_MANUAL.md  INDEX.md  PHASES.md  TAXONOMY.md
docs/agents/: AGENT_MANUAL.md
docs/ml_experiment_lifecycle/: 01_DATA_EXPLORATION_MANUAL.md  02_FEATURE_ENGINEERING_MANUAL.md  03_SPLITTING_AND_BASELINES_MANUAL.md  04_MODEL_TRAINING_MANUAL.md  05_EVALUATION_AND_ANALYSIS_MANUAL.md  06_CROSS_DOMAIN_TRANSFER_MANUAL.md  README.md
docs/ml_experiment_phases/: README.md
docs/research/: RESEARCH_LOG.md  RESEARCH_LOG_ENTRY.md  ROADMAP.md
docs/templates/: README.md  dag_status_template.yaml  dag_template.yaml  dataset_reports_readme_template.yaml  duckdb_schema_template.yaml  notebook_template.yaml  phase_status_template.yaml  phase_template.yaml  pipeline_section_status_template.yaml  plan_critique_template.md  plan_template.md  planner_output_contract.md  raw_data_readme_template.yaml  research_log_entry_template.yaml  research_log_template.yaml  spec_template.md  step_status_template.yaml  step_template.yaml
docs/thesis/: PJAIT_THESIS_REQUIREMENTS.md  THESIS_WRITING_MANUAL.md
planning/: BACKLOG.md  CHAPTER_4_DEFEND_IN_THESIS.md  INDEX.md  README.md  critique_aoestats_01_02_03.md  current_plan.critique.md  current_plan.critique_resolution.md  current_plan.md  final_production_pr_plan.md  fixes_and_next_steps.md  plan_01_02_03_struct_eda.md  plan_aoe2companion_01_02_03.md  plan_aoe2companion_01_02_04.critique.md  plan_aoe2companion_01_02_04.md  plan_aoe2companion_01_02_04_fix.critique.md  plan_aoe2companion_01_02_04_fix.md  plan_aoe2companion_01_02_04_pass2.md  plan_aoe2companion_01_02_05.critique.md  plan_aoe2companion_01_02_05.md  plan_aoe2companion_01_02_06.critique.md  plan_aoe2companion_01_02_06.md  plan_aoe2companion_01_02_07.critique.md  plan_aoe2companion_01_02_07.md  plan_aoe2companion_01_03_01.critique.md  plan_aoe2companion_01_03_01.md  plan_aoe2companion_01_03_02.critique.md  plan_aoe2companion_01_03_02.md  plan_aoe2companion_01_03_03.md  plan_aoestats_01_02_03.md  plan_aoestats_01_02_04.critique.md  plan_aoestats_01_02_04.md  plan_aoestats_01_02_04_fix.critique.md  plan_aoestats_01_02_04_fix.md  plan_aoestats_01_02_04_pass2.critique.md  plan_aoestats_01_02_04_pass2.md  plan_aoestats_01_02_05.critique.md  plan_aoestats_01_02_05.md  plan_aoestats_01_02_06.critique.md  plan_aoestats_01_02_06.md  plan_aoestats_01_02_07.critique.md  (+26 more)
planning/dags/: DAG.yaml  README.md
planning/specs/: README.md  spec_01_drift_tests.md  spec_01_gitignore.md  spec_01_log_subagent.md  spec_01_roadmaps.md  spec_01_sc2_research_log.md  spec_01_trim_claude.md  spec_02_aoe2_readme.md  spec_02_aoe2c_research_log.md  spec_02_ingestion.md  spec_02_log_bash.md  spec_02_mv_sc2.md  spec_02_trim_architecture.md  spec_03_aoestats_research_log.md  spec_03_hooks_readme.md  spec_03_mv_aoe2.md  spec_03_strategy_ab.md  spec_03_trim_executor.md  spec_04_changelog.md  spec_04_migrate_logs.md  spec_04_mv_data.md  spec_05_tests.md  (+27 more)
reports/: 00_map_translation_coverage.csv  00_path_b_extraction_log.txt  01_corpus_summary.json  01_event_density_by_tournament.csv  01_event_density_by_year.csv  01_parse_quality_by_tournament.csv  01_parse_quality_summary.md  01_playerstats_sampling_check.csv  01_result_field_audit.md  03_run.md  README.md  RESEARCH_LOG_TEMPLATE.md  ROADMAP.md  SC2ML_THESIS_ROADMAP.md  research_log.md
sandbox/: README.md  jupytext.toml  notebook_config.toml
scripts/: README.md  check_01_05_binding.py  check_mirror_drift.py  session_audit.py  validate_phase02_readiness_contracts.py
specs/: README.md  spec_00.md  spec_01.md  spec_02.md  spec_03.md  spec_04.md
temp/: 01_02_roadmap_finalization.md  commit_msg.txt  critique_4_2_r1.md  critique_4_2_r2.md  dag_repo_fork.md  dag_visualization_sample.md  follow_up_plan.md  note.md  optional_dag_off.md  parallel_dataset_architecture.md  pass_01.md  phase01_assessment.md  plan_01_05_sc2egset.md  plan_4_2_v1.md  plan_4_2_v2.md  plan_4_2_v3.md  plan_raw_schemas.md  plan_rerun_01_01_01.md  plan_review_gate_policy.md  plan_templating.md  plan_thesis_draftable.md  pr.txt  r2_user_decisions.md  research_log_decentralization.md  review_prompt.md  session_report_2026-04-18.md  templating_audit.md  thesis_pipeline_design.md
tests/: conftest.py  fixtures.py  helpers.py  helpers_classical.py  helpers_tuning.py  test_baselines.py  test_cli.py  test_common_db.py  test_common_db_cli.py  test_cv.py  test_data_validation.py  test_evaluation.py  test_feature_engineering.py  test_gnn_diagnostics.py  test_gnn_embedder.py  test_gnn_visualizer.py  test_graph_construction.py  test_integration.py  test_model_reproducibility.py  test_mps.py  test_sanity_validation.py
thesis/: README.md  THESIS_STRUCTURE.md  WRITING_STATUS.md  references.bib
(+743 files in other folders)
