[project]
name = "rts-outcome-prediction"
version = "3.29.1"
description = "RTS game result prediction — SC2 and AoE2 comparative ML study"
authors = [{name = "Tomasz Pionka"}]
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[project.scripts]
sc2 = "rts_predict.games.sc2.cli:main"
aoe2 = "rts_predict.games.aoe2.cli:main"

[tool.poetry]
packages = [{include = "rts_predict", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
duckdb = "^1.5.1"
pandas = "^3.0.1"
numpy = "^1.26.4"
scipy = "^1.17.1"
scikit-learn = "^1.8.0"
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
matplotlib = "^3.10.8"
networkx = "^3.6.1"
gensim = "^4.4.0"
node2vec = "^0.5.0"
torch = "^2.11.0"
torchvision = "^0.26.0"
torchaudio = "^2.11.0"
torch-geometric = "^2.7.0"
# torch-cluster, torch-scatter, torch-sparse require manual installation on ARM64:
#   pip install torch-cluster torch-scatter torch-sparse --no-build-isolation
# Also requires: brew install libomp
pyarrow = "^23.0.1"
optuna = "^4.8.0"
shap = ">=0.44,<0.50"
tabulate = "^0.10.0"
pyyaml = "^6.0.3"
statsmodels = ">=0.14,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.9.0"
mypy = "^1.14.0"
pytest-cov = "^7.1.0"
coverage = "^7.13.5"
jupyterlab = ">=4.4.0,<5"
ipykernel = ">=6.30.0,<7"
jupytext = ">=1.16.0,<2"
nbconvert = ">=7.16.0,<8"
pre-commit = ">=3.7.0,<4"
diff-cover = "^9.0"
types-pyyaml = "^6.0.12.20260408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    # Sandbox notebooks use jupytext percent-format: imports after `# %%` cell
    # boundaries always trigger E402, and comment/markdown cells trigger E501.
    # Notebook quality is governed by sandbox/README.md, not ruff.
    "sandbox/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib --strict-markers --strict-config"
markers = [
    "gnn: GNN-specific tests (deselect with '-m not gnn')",
    "mps: Apple MPS GPU tests (deselect with '-m not mps')",
    "slow: slow tests requiring subprocess isolation (deselect with '-m not slow')",
    "sanity: Phase 0 data & model sanity validation (ROADMAP §3)",
]

[tool.coverage.run]
source = ["src/rts_predict"]
branch = true
omit = [
    "sandbox/**",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
fail_under = 95

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.mirror_drift]
exempt_sources = [
    "src/rts_predict/games/sc2/config.py",
    "src/rts_predict/games/aoe2/config.py",
    "src/rts_predict/games/aoe2/datasets/aoe2companion/types.py",
]

[tool.diff_cover]
compare_branch = "origin/master"
fail_under = 90
